--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="welcome-box">
                 <h1 class="welcome-title">WELCOME TO THE FHLL!</h1>
                 <p class="welcome-text">
-                    The **Former Hardest Levels List (FHLL)** tracks and ranks the former hardest levels (including the current hardest) in Geometry Dash, **ranked according to their difficulty status on the Impossible Levels List (ILL)**. This list celebrates the history of difficulty in the game.
+                    The <strong>Former Hardest Levels List (FHLL)</strong> tracks and ranks the former hardest levels (including the current hardest) in Geometry Dash, <strong>ranked according to their difficulty status on the Impossible Levels List (ILL)</strong>. This list celebrates the history of difficulty in the game.
                 </p>
                 <div class="home-buttons">
                     <button onclick="changePage('list')">View The List</button>
@@ -146,20 +146,20 @@
                 <h3>Submission Guidelines</h3>
                 <p>Please review these guidelines carefully before submitting a record:</p>
                 <ul>
-                    <li>**Your video must be uncut and have clicks completely audible the whole way through.** This ensures authenticity and helps staff verify your run.</li>
-                    <li>**Your completion video must be uploaded to YouTube or another recognized video-based platform.** Direct social media links (TikTok, Instagram) are not permitted.</li>
-                    <li>**You must have a visible cheat indicator if your mod menu has one.** This helps verify that no disallowed modifications were used.</li>
-                    <li>**The LDM/Bugfix copy of a level has to, without a doubt, not make a significant difference in the level.** Minor graphical changes are fine, but any change that simplifies gameplay is forbidden.</li>
-                    <li>**Your record can be valid if it ends midway through the endscreen, ONLY if it's impossible to die in the endscreen.** If the last possible point of death has passed, the record is acceptable.</li>
-                    <li>**If your record is in the Top 15, you must submit raw footage, with split audio tracks in a downloadable format (e.g., Google Drive/Dropbox).** This is a mandatory measure for the hardest levels on the list.</li>
-                    <li>**Your record cannot contain any disallowed mods or cheats; Click Between Frames (CBF) is allowed, but physics bypass is not.**</li>
-                    <li>**During your completion, you cannot use skips that make the level significantly easier.** This includes major route deviations not intended by the creator.</li>
+                    <li><strong>Your video must be uncut and have clicks completely audible the whole way through.</strong> This ensures authenticity and helps staff verify your run.</li>
+                    <li><strong>Your completion video must be uploaded to YouTube or another recognized video-based platform.</strong> Direct social media links (TikTok, Instagram) are not permitted.</li>
+                    <li><strong>You must have a visible cheat indicator if your mod menu has one.</strong> This helps verify that no disallowed modifications were used.</li>
+                    <li><strong>The LDM/Bugfix copy of a level has to, without a doubt, not make a significant difference in the level.</strong> Minor graphical changes are fine, but any change that simplifies gameplay is forbidden.</li>
+                    <li><strong>Your record can be valid if it ends midway through the endscreen, ONLY if it's impossible to die in the endscreen.</strong> If the last possible point of death has passed, the record is acceptable.</li>
+                    <li><strong>If your record is in the Top 15, you must submit raw footage, with split audio tracks in a downloadable format (e.g., Google Drive/Dropbox).</strong> This is a mandatory measure for the hardest levels on the list.</li>
+                    <li><strong>Your record cannot contain any disallowed mods or cheats; Click Between Frames (CBF) is allowed, but physics bypass is not.</strong></li>
+                    <li><strong>During your completion, you cannot use skips that make the level significantly easier.</strong> This includes major route deviations not intended by the creator.</li>
                 </ul>
                 <p class="staff-contact">For any questions regarding a submission, please contact the staff via Discord.</p>
             </div>
         </section>
 
-        <section id="profile-page" class="page hidden centered-page">
+        <section id="profile-page" class="page hidden top-middle-centered-page">
             <h1>Player Profile</h1>
             <p>This section is reserved for future updates and will dynamically display a player's statistics, hardest completions, and list ranking.</p>
         </section>
