--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <li><strong>The LDM/Bugfix copy of a level has to, without a doubt, not make a significant difference in the level.</strong> Minor graphical changes are fine, but any change that simplifies gameplay is forbidden.</li>
                     <li><strong>Your record can be valid if it ends midway through the endscreen, ONLY if it's impossible to die in the endscreen.</strong> If the last possible point of death has passed, the record is acceptable.</li>
                     <li><strong>If your record is in the Top 15, you must submit raw footage, with split audio tracks in a downloadable format (e.g., Google Drive/Dropbox).</strong> This is a mandatory measure for the hardest levels on the list.</li>
-                    <li><strong>Your record cannot contain any disallowed mods or cheats; Click Between Frames (CBF) is allowed, but physics bypass is not.</strong></li>
+                    <li><strong>Your record cannot contain any disallowed mods or cheats</strong>; Click Between Frames (CBF) is allowed, but physics bypass is not.</li>
                     <li><strong>During your completion, you cannot use skips that make the level significantly easier.</strong> This includes major route deviations not intended by the creator.</li>
                 </ul>
                 <p class="staff-contact">For any questions regarding a submission, please contact the staff via Discord.</p>
