--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="welcome-box">
                 <h1 class="welcome-title">WELCOME TO THE FHLL!</h1>
                 <p class="welcome-text">
-                    The <strong>Former Hardest Levels List (FHLL)</strong> tracks and ranks the former hardest levels (including the current hardest) in Geometry Dash, <strong>ranked according to their difficulty status on the Impossible Levels List (ILL)</strong>. This list celebrates the history of difficulty in the game.
+                    The **Former Hardest Levels List (FHLL)** ranks the former hardest levels (including the current hardest) in Geometry Dash, **ranked according to their difficulty on the Impossible Levels List (ILL)**. This list celebrates the history of difficulty in the game.
                 </p>
                 <div class="home-buttons">
                     <button onclick="changePage('list')">View The List</button>
