--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
                     <div class="form-row">
                         <label for="player-name">Username: <span class="required-asterisk">*</span></label>
-                        <input type="text" id="player-name" placeholder="Your GD Username" required>
+                        <input type="text" id="player-name" placeholder="Your Username" required>
                     </div>
 
                     <div class="form-row">
