--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <main id="content">
         <section id="home-page" class="page active centered-page">
+            
             <div class="welcome-box">
                 <h1 class="welcome-title">WELCOME TO THE FHLL!</h1>
                 <p class="welcome-text">
@@ -31,6 +32,19 @@
                     <button onclick="changePage('leaderboard')">View Leaderboard</button>
                 </div>
             </div>
+
+            <div id="changelog-container" class="changelog-container">
+                <h2>CHANGELOG</h2>
+                <div id="changelog-entries">
+                    <div class="changelog-entry">
+                        <p class="changelog-date">09/25/2025</p>
+                        <p class="changelog-item">FHLL Website Launched with initial data.</p>
+                        <p class="changelog-item">Verifier points system implemented.</p>
+                        <p class="changelog-item">Submission form updated and GDDL Enjoyment renamed to EDEL Enjoyment.</p>
+                    </div>
+                </div>
+                </div>
+
         </section>
 
         <section id="list-page" class="page hidden list-layout">
@@ -107,7 +121,7 @@
                     </div>
 
                     <div class="form-row">
-                        <label for="enjoyment">Enjoyment (0.0-10.0):</label>
+                        <label for="enjoyment">Effort Score (0-10):</label>
                         <input type="number" step="0.1" id="enjoyment" min="0" max="10" placeholder="e.g. 7.1, 6.0">
                     </div>
 
