--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
                         <input type="url" id="raw-footage" placeholder="Link to your raw footage (Drive/Dropbox/etc.)">
                     </div>
 
-                    <div class="form-row">
-                        <label for="enjoyment">Effort Score (0-10):</label>
-                        <input type="number" step="0.1" id="enjoyment" min="0" max="10" placeholder="e.g. 7.1, 6.0">
+                   <div class="form-row">
+                       <label for="best-run">Best Run Percentage (0-100):</label>
+                       <input type="number" id="best-run" min="0" max="100" placeholder="e.g. 98 or N/A">
                     </div>
 
                     <div class="form-row">
