--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                         <p class="changelog-item">FHLL Website Launched with initial data.</p>
                         <p class="changelog-item">Verifier points system implemented.</p>
                         <p class="changelog-item">Submission form updated and GDDL Enjoyment renamed to EDEL Enjoyment.</p>
+                        <p class="changelog-item">Added all the former hardest levels.</p>
                     </div>
                 </div>
                 </div>
