--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 
                     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" 
                         onload="if(submitted) {alert('Record submitted successfully and sent for review!'); submitted=false;}"></iframe>
-                    <div class="form-row">
+                    
+                    <div class="form-row single-column-row">
                         <label for="submit-level-select">Level: <span class="required-asterisk">*</span></label>
                         <select id="submit-level-select" name="entry.440263640" required>
                             <option value="">Select a Level</option>
