--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" 
                         onload="if(submitted) {alert('Record submitted successfully and sent for review!'); submitted=false;}"></iframe>
                     
-                    <div class="form-row single-column-row">
+                    <div class="form-row">
                         <label for="submit-level-select">Level: <span class="required-asterisk">*</span></label>
                         <select id="submit-level-select" name="entry.440263640" required>
                             <option value="">Select a Level</option>
@@ -104,7 +104,7 @@
                         <label for="completion-link">Completion Link: <span class="required-asterisk">*</span></label>
                         <input type="url" id="completion-link" name="entry.550186591" placeholder="Video link to your completion" required>
                     </div>
-
+                    
                     <div class="form-row">
                         <label for="player-name">Username: <span class="required-asterisk">*</span></label>
                         <input type="text" id="player-name" name="entry.1118671343" placeholder="Your Username" required>
