--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <header>
         <a href="#home" class="logo">FHLL</a>
         <nav>
-            <a href="#list" data-page="list">The List</a>
-            <a href="#leaderboard" data-page="leaderboard">Leaderboard</a>
-            <a href="#submit" data-page="submit">Submit Record</a>
+            <a href="#list" data-page="list" onclick="changePage('list')">The List</a>
+            <a href="#leaderboard" data-page="leaderboard" onclick="changePage('leaderboard')">Leaderboard</a>
+            <a href="#submit" data-page="submit" onclick="changePage('submit')">Submit Record</a>
             <a href="https://discord.gg/YOUR_DISCORD_INVITE" target="_blank">Discord</a>
-            <a href="#profile" data-page="profile">Profile</a>
+            <a href="#profile" data-page="profile" onclick="changePage('profile')">Profile</a>
         </nav>
     </header>
 
@@ -99,23 +99,13 @@
                     </div>
                     
                                         <div class="form-row">
-                        <label for="username">Username: <span class="required-asterisk">*</span></label>
-                        <input type="text" id="username" name="entry.45681910" placeholder="Your Username" required>
-                    </div>
-
-                                        <div class="form-row">
                         <label for="completion-link">Completion Link: <span class="required-asterisk">*</span></label>
                         <input type="url" id="completion-link" name="entry.45658679" placeholder="Video link to your completion" required>
                     </div>
 
-                                                            <div class="form-row" id="raw-footage-row">
-                        <label for="raw-footage">Raw Footage (Required for Top 15):</label>
-                        <input type="url" id="raw-footage" name="entry.45672202" placeholder="Link to your raw footage (Drive/Dropbox/etc.)">
-                    </div>
-
                                         <div class="form-row">
-                        <label for="level-id">Level ID (Optional):</label>
-                        <input type="text" id="level-id" name="entry.440263640" placeholder="ID of the LDM/Bugfix if used">
+                        <label for="username">Username: <span class="required-asterisk">*</span></label>
+                        <input type="text" id="username" name="entry.45681910" placeholder="Your Username" required>
                     </div>
 
                                         <div class="form-row">
@@ -125,8 +115,17 @@
                             <option>Mobile</option>
                         </select>
                     </div>
+                    
+                                        <div class="form-row" id="raw-footage-row">
+                        <label for="raw-footage">Raw Footage (Required for Top 15):</label>
+                        <input type="url" id="raw-footage" name="entry.45672202" placeholder="Link to your raw footage (Drive/Dropbox/etc.)">
+                    </div>
 
-
+                                        <div class="form-row">
+                        <label for="level-id">Level ID (Optional):</label>
+                        <input type="text" id="level-id" name="entry.440263640" placeholder="ID of the LDM/Bugfix if used">
+                    </div>
+                    
                                         <div class="form-row">
                         <label for="best-run">Best Run Percentage (0-100):</label>
                         <input type="number" id="best-run" name="entry.111623321" min="0" max="100" placeholder="e.g. 98 or N/A">
@@ -194,7 +193,7 @@
             submitted = true;
         });
 
-        // Simple page-switching logic for a static site
+        // Simple page-switching logic (This must remain simple for compatibility with script.js)
         function changePage(pageId) {
             document.querySelectorAll('.page').forEach(page => {
                 page.classList.add('hidden');
@@ -206,14 +205,13 @@
                 targetPage.classList.add('active');
             }
 
-            // Re-run initialization for page-specific elements
-            if (pageId === 'leaderboard') {
-                // Check if the script exists before calling the function
-                if (typeof renderLeaderboard === 'function') {
-                    renderLeaderboard(1);
-                }
+            // These calls rely on functions in script.js and data.js
+            if (pageId === 'leaderboard' && typeof renderLeaderboard === 'function') {
+                renderLeaderboard(1);
             }
-            // Rerun submit page setup to correctly set Raw Footage requirements
+            if (pageId === 'list' && typeof renderLevelList === 'function') {
+                renderLevelList(); // This should re-render the list
+            }
             if (pageId === 'submit' && typeof setupSubmitPage === 'function') {
                 setupSubmitPage();
             }
