--- a/index.html
+++ b/index.html
@@ -84,10 +84,11 @@
                     <p class="submission-queue">There are currently 0 submissions in the queue.</p>
                 </div>
                 
-                <form class="submission-form" 
-                    action="https://docs.google.com/forms/d/e/1FAIpQLSdeJ6mK0lTDy6IJzEH-JYDa_TZVe9bKHw_F4nae0fLmTmyJxw/formResponse" 
-                    method="POST" 
-                    target="hidden_iframe"> 
+              <form class="submission-form" 
+    action="https://docs.google.com/forms/d/e/1FAIpQLSdeJ6mK0lTDy6IJzEH-JYDa_TZVe9bKHw_F4nae0fLmTmyJxw/formResponse" 
+    method="POST" 
+    target="hidden_iframe"
+    onsubmit="submitted=true;">
 
                     <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" 
                         onload="if(submitted) {alert('Record submitted successfully and sent for review!'); submitted=false; document.querySelector('.submission-form').reset();}"></iframe>
